syntax = "proto3";
package models;

option go_package = "protocols/notify";

message Notification {
   string     note_uuid  = 1;
   string     candidate_name  = 2;
   string     canditate_url  = 3;
   string     user_uuid  = 4;
   string     vacancy_uuid  = 5;
   bool     is_readed  = 6;
}

message Notifications {
    repeated Notification notifications = 1;
}



